addded deboan stretch in travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ services: docker
 env:
   global:
     - ROLE_NAME: jupyter
+  matrix:
+    - MOLECULE_DISTRO: "debian:9"
+    - MOLECULE_DISTRO: "debian:10"
 
 install:
   # Install test dependencies.
