added correct role name to meta info

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: jupyter
   author: Bastian Bukatz
   description: Role to setup a jupyter based pythen development environment
   company: einfachIT
